--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -8,24 +8,24 @@
   justify-content: space-between;
   align-items: center;
   background-color: $main-color-2;
-  background-image: url("/source/img/catalog/gift-background-1x.jpg");
+  background-image: url("../img/catalog/gift-background-1x.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("/source/img/catalog/gift-background-2x.jpg");
+    background-image: url("../img/catalog/gift-background-2x.jpg");
   }
 
   &::before {
     width: 78px;
     height: 80px;
     content: "";
-    background-image: url("/source/img/catalog/icon-gift-mobile.svg");
+    background-image: url("../img/catalog/icon-gift-mobile.svg");
     background-size: contain;
     background-repeat: no-repeat;
 
     @media (min-width: $tablet-width) {
-      background-image: url("/source/img/catalog/icon-gift-tablet.svg");
+      background-image: url("../img/catalog/icon-gift-tablet.svg");
       width: 80px;
       height: 82px;
     }
@@ -34,10 +34,10 @@
   @media (min-width: $tablet-width) {
     padding: 57px 124px 61px 77px;
     flex-direction: row;
-    background-image: url("/source/img/catalog/gift-background-tablet-1x.jpg");
+    background-image: url("../img/catalog/gift-background-tablet-1x.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("/source/img/catalog/gift-background-tablet-2x.jpg");
+      background-image: url("../img/catalog/gift-background-tablet-2x.jpg");
     }
   }
 
@@ -46,10 +46,10 @@
     padding: 56px 0 42px;
     margin: 0;
     flex-direction: column;
-    background-image: url("/source/img/catalog/gift-background-desktop-1x.jpg");
+    background-image: url("../img/catalog/gift-background-desktop-1x.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("/source/img/catalog/gift-background-desktop-2x.jpg");
+      background-image: url("../img/catalog/gift-background-desktop-2x.jpg");
     }
   }
 }
